# src/main/resources/swagger/swagger.yml
@@ -178,10 +178,28 @@ paths:
               schema:
                 $ref: "#/components/schemas/OrderResponse"
 
+  /api/orders/delete/{orderId}:
+    get:
+      tags: [ order-controller ]
+      summary: Delete Order By ID
+      parameters:
+        - in: path
+          name: orderId
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Order Deleted successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OrderResponse"
+
   # =======================
   # Payment Controller
   # =======================
-  /api/payments:
+  /api/payments/createPayment:
     post:
       tags: [payment-controller]
       summary: Create Dummy Payment
@@ -202,26 +220,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/PaymentResponse"
-
-  /api/payments/user/{userId}:
-    get:
-      tags: [payment-controller]
-      summary: Get Payment History By User
-      parameters:
-        - in: path
-          name: userId
-          required: true
-          schema:
-            type: integer
-      responses:
-        "200":
-          description: Payment history fetched
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/PaymentResponse"
 
   # =======================
   # Refund Controller
